snapshots/syntax/statements/declarations/erase/erase_at_module_level.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EraseStatement
      children:
        - kind: EraseKeyword
          text: Erase
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: globalArray
        - kind: Newline
          text: "\n"
