snapshots/syntax/statements/declarations/erase/erase_preserves_whitespace.snap
---
source: src/syntax/statements/declarations/erase.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: EraseStatement
      children:
        - kind: EraseKeyword
          text: Erase
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: myArray
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
